# finitediffX

./: .gitignore  CHANGELOG.md  FiniteDiffX Examples.ipynb  README.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: pypi.yml  tests.yml
.trunk/: trunk.yaml
assets/: FiniteDiffX Examples.ipynb
docs/: conf.py  examples.rst  index.rst
docs/API/: api.rst  array.rst  transformation.rst
docs/notebooks/: finitedifference_backprop.ipynb  finitedifference_jvp.ipynb  getting_started.ipynb
finitediffx/: __init__.py
finitediffx/_src/: __init__.py  fgrad.py  finite_diff.py  utils.py
requirements/: requirements.txt
tests/: test_fgrad.py  test_finite_diff.py
