[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "finitediffx"
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
description = "Finite difference tools in JAX"
authors = [{ name = "Mahmoud Asem", email = "mahmoudasem00@gmail.com" }]
keywords = [
  "jax",
  "finite-difference",
]
dependencies = ["jax>=0.4.7", "typing-extensions"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
version = { attr = "finitediffx.__version__" }

[tool.setuptools.packages.find]
include = ["finitediffx", "finitediffx.*"]

[project.urls]
Source = "https://github.com/ASEM000/finitediffx"


[tool.ruff]
select = ["F", "E", "I"]
line-length = 120
ignore = [
  "E731", # do not assign a lambda expression, use a def
]
